--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@
 	padding: 0;
 }
 
+* element {
+	overflow: -moz-scrollbars-none;
+}
+
+
 @media (prefers-color-scheme: light) {
 	body {
 		background-color: rgb(255, 255, 255);
@@ -51,7 +56,12 @@ header {
 }
 
 header img {
+	transition: all 300ms;
 	height: 80px;
+}
+
+header img:hover {
+	transform: scale(1.2);
 }
 
 header ul {
@@ -74,76 +84,118 @@ header ul li :hover {
 	color: rgb(70, 0, 119);
 }
 
+.me ul{
+	display: flex;
+	list-style: none;
+}
+
+.me li {
+	display: inline-block;
+}
+
+.me img {
+	position: relative;
+	height: 50vh;
+	border-radius: 40px;
+	box-shadow: -1px -1px 3px var(--white-shadow), 1px 1px 3px var(--dark-shadow);
+}
+
+
+.selfie :hover {
+	transition: all 300ms;
+	filter: blur(3px) brightness(0.4);
+	color: var(--text-color);
+}
+
 .projectList {
-	padding: 10px;
+	margin: 1%;
+	border-radius: 40px;
+	padding-bottom: 10px;
+	background-color: var(--section-bg);
 }
 .projectList ul element {
 	overflow: -moz-scrollbars-none;
 }
 
-.projectList ul element::-webkit-scrollbar {
-	width: 0 !important;
-	display: none;
+.projectList ::-webkit-scrollbar {
+	padding: 10px;
+	border-radius: 10px;
+}
+
+.projectList ul::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	background: rgba(0, 0, 0, 0.2);
+}
+
+.projectList ul::-webkit-scrollbar-button:single-button:horizontal:decrement {
+	height:40px;
+	width: 40px;
+	background-position: center 5px;
+}
+
+.projectList ul::-webkit-scrollbar-button:single-button:horizontal:increment {
+	height:40px;
+	width: 40px;
+	background-position: center 5px;
 }
 
 .projectList ul {
-	padding: 10px;
-	border-radius: 20px;
-	background-color: var(--section-bg);
-
 	display: flex;
-	overflow: hidden;
+	overflow-x: scroll;
 	
-	scroll-padding: 0 50%;
-	scroll-snap-type: x mandatory;
+	scroll-padding: 0 0;
+	scroll-snap-type: x mandatory !important;
 }
 
 .projectList li {
 	list-style: none;
 	display: inline-block;
 
-	margin: 1%;
+	margin: 3%;
 	scroll-snap-align: center;
 }
 
 .projectName {
 	text-align: center;
-	font-size: 150%;
+	font-size: 40px;
 }
+
+.projectDescription {
+	text-align: center;
+	width: 40vw;
+	max-width: 40vh;
+}
+
 .shadow {
-	transition: filter 300 ms;
+	transition: all 300ms;
 }
 .projectList li img {
 	border-radius: 20%;
-	box-shadow: -1px -1px 3px var(--white-shadow), 1px 1px 3px var(--dark-shadow);
+	box-shadow: -3px -3px 3px var(--white-shadow), 3px 3px 3px var(--dark-shadow);
 	width: 40vw;
 	max-width: 40vh;
 }
 
 .shadow :hover {
-	transition: filter 300ms;
+	transition: all 300ms;
 	filter: blur(3px);
-	border-radius: 20%;
 }
 
 footer {
 	grid-area: footer;
-	position: absolute;
 	bottom: 0;
 	width: 100%;
 	height:auto;
+	align-items: center;
+	padding: auto;
+	height: auto;
 }
 
 .contactBar {
 	background-color: var(--section-bg);
 	width: 100%;
-}
-
-.contactBar ul {
 	display: flex;
-	
-	scroll-padding: 0 50%;
-	scroll-snap-type: x mandatory;
+	justify-content:center;
 }
 
 .contactBar li {
@@ -153,12 +205,12 @@ footer {
 }
 
 .contactBar li a {
+	transition: color 300ms;
 	text-decoration: none;
 	color: var(--text-color);
 	margin: 10px;
 	font-size: 40px;
 }
 .contactBar li a:hover {
-	transition: color 300ms;
 	color: rgb(70, 0, 119);
 }
