finished home page

--- a/style.css
+++ b/style.css
@@ -4,12 +4,21 @@
 }
 
 * {
+	scroll-behavior: smooth;
 	margin: 0;
 	padding: 0;
 }
 
 * element {
 	overflow: -moz-scrollbars-none;
+}
+
+* a {
+	text-decoration: none;
+	color: var(--text-color);
+}
+* a:hover {
+	color:rgb(70, 0, 119);
 }
 
 
@@ -76,6 +85,7 @@ header ul li {
 
 header ul li a {
 	transition: all 300ms;
+	text-decoration:underline;
 	color: var(--text-color);
 }
 
@@ -179,6 +189,30 @@ header ul li :hover {
 .shadow :hover {
 	transition: all 300ms;
 	filter: blur(3px);
+}
+
+.leftright {
+	display: flex;
+	justify-content: center;
+}
+
+.leftright li {
+	padding: 10px;
+	list-style: none;
+	display: inline-block;
+}
+
+.leftright li a {
+	color: var(--text-color);
+	text-decoration: none;
+	font-size: 40px;
+}
+
+/* Not happy with this solution. Working on fixing up SVGs for the buttons on the scrollbar to work better for pc's*/
+
+.leftright li a:hover {
+	transition: all 300ms;
+	color: rgb(70, 0, 119);
 }
 
 footer {
