--- a/style.css
+++ b/style.css
@@ -119,8 +119,10 @@ header ul li :hover {
 
 .projectList {
 	margin: 1%;
-	border-radius: 40px;
 	-webkit-border-radius: 40px;
+	-moz-border-radius: 40px;
+	-khtml-border-radius: 40px;
+	border-radius: 40px;
 	padding-bottom: 10px;
 	background-color: var(--section-bg);
 }
