--- a/style.css
+++ b/style.css
@@ -94,6 +94,13 @@ header ul li :hover {
 	color: rgb(70, 0, 119);
 }
 
+.me {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+
+}
+
 .me ul{
 	display: flex;
 	list-style: none;
@@ -104,8 +111,10 @@ header ul li :hover {
 }
 
 .me img {
+	height: 400px;
 	padding-top: 40px;
-	height: 50vh;
+	position: relative;
+	right: 0;
 }
 
 .projectList {
