--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ header ul li :hover {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-
+	overflow: hidden;
 }
 
 .me ul{
