--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ header ul li :hover {
 	list-style: none;
 	display: inline-block;
 
-	margin: 3%;
+	padding: 3%;
 	scroll-snap-align: center;
 }
 
